<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fxcalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="balance_dd">Balance:</string>
    <string name="volume_dd">Volume:</string>
    <string name="profit_dd">Profit:</string>
    <string name="loss_dd">Loss:</string>
    <string name="leverage_dd">Leverage:</string>
    <string name="button_add_volume">+10</string>
    <string name="button_odd_volume">-10</string>
    <string name="commission_dd">Commission:</string>
    <string-array name="markets">
        <item>EURUSD</item>
        <item>USDJPY</item>
        <item>EURJPY</item>
        <item>USDCHF</item>
        <item>USDCAD</item>
        <item>AUDUSD</item>
        <item>NZDUSD</item>
        <item>EURGBP</item>
        <item>GBPUSD</item>
    </string-array>

    <string name="action_stooq">Stooq</string>
</resources>
